--- a/templates/dashboards/overview.html
+++ b/templates/dashboards/overview.html
@@ -147,7 +147,7 @@
         <div class="card">
             <div class="card-header">
                 <h5 class="card-title mb-0">
-                  <i class="bi bi-bar-chart me-2"></i>Budget vs Disbursed by Cluster
+                  <i class="bi bi-bar-chart me-2"></i>Budget vs Disbursed by Cluster in Kwacha
                 </h5>
             </div>
             <div class="card-body">
