--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -167,7 +167,7 @@
           &copy; {% now "Y" %} ZNPHI. All rights reserved.
         </p>
         <p class="mb-0 text-muted small">
-          An open Source project powered by Byte Data.
+          An open Source project powered by <a href="https://github.com/byte-data/imptracker" style="text-decoration: none; color: black;" target=_blank /><b>ByteData</b></a>.
         </p>
       </div>
     </div>
