--- a/templates/activities/detail.html
+++ b/templates/activities/detail.html
@@ -55,7 +55,7 @@
                                 <span class="badge bg-secondary" id="status-display">{{ activity.status.name }}</span>
                                 {% if perms.activities.change_activity or user == activity.responsible_officer %}
                                 <button type="button" class="btn btn-sm btn-link p-0 ms-2" data-bs-toggle="modal" data-bs-target="#statusModal" title="Edit status">
-                                    <i class="bi bi-pencil-square text-success"></i>
+                                    <i class="bi bi-pencil-square text-secondary"></i>
                                 </button>
                                 {% endif %}
                             </div>
@@ -347,7 +347,7 @@
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="button" class="btn btn-secondary me-2" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary">Upload</button>
+                        <button type="submit" class="btn btn-success">Upload</button>
                     </div>
                 </form>
             </div>
@@ -385,7 +385,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="saveStatusBtn">Save Changes</button>
+                <button type="button" class="btn btn-success" id="saveStatusBtn">Save Changes</button>
             </div>
         </div>
     </div>
@@ -425,7 +425,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="saveOfficerBtn">Save Changes</button>
+                <button type="button" class="btn btn-success" id="saveOfficerBtn">Save Changes</button>
             </div>
         </div>
     </div>
@@ -451,7 +451,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="saveNotesBtn">Save Changes</button>
+                <button type="button" class="btn btn-success" id="saveNotesBtn">Save Changes</button>
             </div>
         </div>
     </div>
