--- a/templates/dashboards/overview.html
+++ b/templates/dashboards/overview.html
@@ -12,7 +12,7 @@
 {% if total_activities == 0 or not total_activities %}
 <!-- Empty State -->
 <div class="row justify-content-center">
-    <div class="col-lg-8">
+    <div class="col">
         <div class="card border-0 shadow-sm">
             <div class="text-center py-5">
                 <div class="mb-4">
