--- a/templates/accounts/user_list.html
+++ b/templates/accounts/user_list.html
@@ -17,7 +17,7 @@
             </h1>
             <p class="page-subtitle text-muted mb-0">Manage system users and permissions</p>
         </div>
-        <a href="{% url 'accounts:user_create' %}" class="btn btn-primary">
+        <a href="{% url 'accounts:user_create' %}" class="btn btn-success">
             <i class="bi bi-person-plus me-2"></i>Create User
         </a>
     </div>
