--- a/templates/masters/cluster_list.html
+++ b/templates/masters/cluster_list.html
@@ -18,7 +18,7 @@
             </h1>
             <p class="page-subtitle text-muted mb-0">Manage organizational clusters and departments</p>
         </div>
-        <a href="{% url 'masters:cluster_create' %}" class="btn btn-primary">
+        <a href="{% url 'masters:cluster_create' %}" class="btn btn-success">
             <i class="bi bi-plus-circle me-2"></i>Add Cluster
         </a>
     </div>
