--- a/templates/masters/funder_list.html
+++ b/templates/masters/funder_list.html
@@ -16,7 +16,7 @@
             <input class="form-check-input" type="checkbox" id="showInactive" {% if show_inactive %}checked{% endif %} onchange="window.location.href='?show_inactive=' + (this.checked ? '1' : '')">
             <label class="form-check-label" for="showInactive">Show Inactive</label>
         </div>
-        <a href="{% url 'masters:funder_create' %}" class="btn btn-primary">
+        <a href="{% url 'masters:funder_create' %}" class="btn btn-success">
             <i class="bi bi-plus-lg me-1"></i> Add Funder
         </a>
     </div>
