--- a/templates/masters/status_list.html
+++ b/templates/masters/status_list.html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="h3 mb-0">Status Management</h1>
-    <a href="{% url 'masters:status_create' %}" class="btn btn-primary">
+    <a href="{% url 'masters:status_create' %}" class="btn btn-success">
         <i class="bi bi-plus-lg me-1"></i> Add Status
     </a>
 </div>
